# structural-shapes

./: Cargo.toml  README.md
examples/: beam.rs  shaft.rs
src/: lib.rs
tests/: all_tests.rs
