[package]
name = "structural-shapes"
version = "0.1.4"
authors = ["Chris McComb <ccmcc2012@gmail.com>"]
description = "Common structural shapes"
edition = "2018"
readme = "README.md"
repository = "https://github.com/cmccomb/structural-shapes"
homepage = "https://github.com/cmccomb/structural-shapes"
documentation = "https://docs.rs/structural-shapes"
license = "MIT"
keywords = ["structural-analysis", "engineering"]
categories = ["mathematics", "science", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
